[package]
name = "pff"
version = "0.1.0"
edition = "2021"
authors = ["Jedrzej Pawel Maczan <jedrzejpawel@maczan.pl>"]
description = "Check your internet connection quality"

[dependencies]
fastping-rs = "0.2.3"
colored = "2.0.0"
spinners = "4.1.0"
clap = { version = "4.5.17", features = ["derive"] }
thiserror = "1.0.63"
